# MiniDB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
minidb/: __init__.py  column.py  database.py  errors.py  index.py  parser.py  persistence.py  planner.py  query.py  table.py  types.py
tests/: __init__.py  test_aggregations.py  test_crud.py  test_database.py  test_index.py  test_joins.py  test_performance.py  test_persistence.py  test_queries.py
